[gd_scene load_steps=3 format=3 uid="uid://cgh1pyghyhhms"]

[ext_resource type="Texture2D" uid="uid://b1iov6mmay580" path="res://Images/cityscape.png" id="1_2i0jd"]
[ext_resource type="Script" path="res://Missions/mission_1/mission_1_game/game_end.gd" id="1_n42fu"]

[node name="game_end" type="Node2D"]
script = ExtResource("1_n42fu")

[node name="backgroundCity" type="Sprite2D" parent="."]
position = Vector2(289, 510)
texture = ExtResource("1_2i0jd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(576, 1024)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 576.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 200

[node name="sceneTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Congratulations!
You've completed the game!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="endDescription" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "User game results"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(576, 0)
layout_mode = 2
alignment = 1

[node name="numCorrect" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "# Correct
"
horizontal_alignment = 1
autowrap_mode = 3

[node name="numTime" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Time"
horizontal_alignment = 1
autowrap_mode = 3

[node name="numRestarts" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "# of Restarts"
horizontal_alignment = 1
autowrap_mode = 3

[node name="nextBtn" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
offset_left = 408.0
offset_top = 936.0
offset_right = 512.0
offset_bottom = 984.0
text = "Next"

[connection signal="pressed" from="nextBtn" to="." method="_on_next_btn_pressed"]
